--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
 </head>
 <body>
     <header class="header">
+        <!-- nav bar -->
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
                 <li>portfolio</li>
                 <li>blogs</li>
-                <li><button>hire me</button></li>
+                <li><button class="btn-primary">hire me</button></li>
             </ul>
         </nav>
+        <!-- banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what ab le cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-white">Contact me</button>
+            </div>
+            <div>
+                <img src="images/hardy.png" class="banner-img" alt="Mary Hardy photo">
+            </div>
+        </div>
     </header>
     <main>
 
