--- a/index.html
+++ b/index.html
@@ -34,8 +34,30 @@
             </div>
         </div>
     </header>
-    <main>
-
+    <main class="main">
+        <!-- about section -->
+        <section class="about">
+            <h3 class="section-title">About me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-details-container">
+                <div class="about-details">
+                    <p class="about-title">Name:</p>
+                    <p class="about-description">Mary Herdy</p>
+                </div>
+                <div class="about-details">
+                    <p class="about-title">Email:</p>
+                    <p class="about-description">info@gmail.com</p>
+                </div>
+                <div class="about-details">
+                    <p class="about-title">specialty</p>
+                    <p class="about-description">Web dev</p>
+                </div>
+                <div class="about-details">
+                    <p class="about-title">Country</p>
+                    <p class="about-description">BD</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
