--- a/index.html
+++ b/index.html
@@ -58,6 +58,34 @@
                 </div>
             </div>
         </section>
+
+        <!-- what I do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="what-details-container">
+                <div class="what-details">
+                    <img src="images/icons/js.png" alt="" class="what-icon">
+                    <p class="icon-name">Vanilla JavaScript</p>
+                    <p class="icon-details ">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                </div>
+                <div class="what-details">
+                    <img src="images/icons/mongo.png" alt="" class="what-icon">
+                    <p class="icon-name">Mongodb</p>
+                    <p class="icon-details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                </div>
+                <div class="what-details">
+                    <img src="images/icons/nodejs.png" alt="" class="what-icon">
+                    <p class="icon-name">NodeJs</p>
+                    <p class="icon-details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                </div>
+                <div class="what-details">
+                    <img src="images/icons/react.png" alt="" class="what-icon">
+                    <p class="icon-name">React JS</p>
+                    <p class="icon-details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
