--- a/index.html
+++ b/index.html
@@ -1,94 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
     <header class="header">
-        <!-- nav bar -->
-        <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
-            <ul>
-                <li>portfolio</li>
-                <li>blogs</li>
-                <li><button class="btn-primary">hire me</button></li>
-            </ul>
-        </nav>
-        <!-- banner -->
-        <div class="banner">
-            <div>
-                <h3 class="banner-sub-title">Hi, I am</h3>
-                <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what ab le cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-white">Contact me</button>
-            </div>
-            <div>
-                <img src="images/hardy.png" class="banner-img" alt="Mary Hardy photo">
-            </div>
+      <!-- nav bar -->
+      <nav>
+        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <ul>
+          <li>portfolio</li>
+          <li>blogs</li>
+          <li><button class="btn-primary">hire me</button></li>
+        </ul>
+      </nav>
+      <!-- banner -->
+      <div class="banner">
+        <div>
+          <h3 class="banner-sub-title">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="banner-description">
+            Shot what ab le cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-white">Contact me</button>
         </div>
+        <div>
+          <img
+            src="images/hardy.png"
+            class="banner-img"
+            alt="Mary Hardy photo"
+          />
+        </div>
+      </div>
     </header>
     <main class="main">
-        <!-- about section -->
-        <section class="about">
-            <h3 class="section-title">About me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-            <div class="about-details-container">
-                <div class="about-details">
-                    <p class="about-title">Name:</p>
-                    <p class="about-description">Mary Herdy</p>
-                </div>
-                <div class="about-details">
-                    <p class="about-title">Email:</p>
-                    <p class="about-description">info@gmail.com</p>
-                </div>
-                <div class="about-details">
-                    <p class="about-title">specialty</p>
-                    <p class="about-description">Web dev</p>
-                </div>
-                <div class="about-details">
-                    <p class="about-title">Country</p>
-                    <p class="about-description">BD</p>
-                </div>
-            </div>
-        </section>
+      <!-- about section -->
+      <section class="about">
+        <h3 class="section-title">About me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-details-container">
+          <div class="about-details">
+            <p class="about-title">Name:</p>
+            <p class="about-description">Mary Herdy</p>
+          </div>
+          <div class="about-details">
+            <p class="about-title">Email:</p>
+            <p class="about-description">info@gmail.com</p>
+          </div>
+          <div class="about-details">
+            <p class="about-title">specialty</p>
+            <p class="about-description">Web dev</p>
+          </div>
+          <div class="about-details">
+            <p class="about-title">Country</p>
+            <p class="about-description">BD</p>
+          </div>
+        </div>
+      </section>
 
-        <!-- what I do section -->
-        <section class="what-i-do">
-            <h3 class="section-title">What I do</h3>
-            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-            <div class="what-details-container">
-                <div class="what-details">
-                    <img src="images/icons/js.png" alt="" class="what-icon">
-                    <p class="icon-name">Vanilla JavaScript</p>
-                    <p class="icon-details ">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-                </div>
-                <div class="what-details">
-                    <img src="images/icons/mongo.png" alt="" class="what-icon">
-                    <p class="icon-name">Mongodb</p>
-                    <p class="icon-details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-                </div>
-                <div class="what-details">
-                    <img src="images/icons/nodejs.png" alt="" class="what-icon">
-                    <p class="icon-name">NodeJs</p>
-                    <p class="icon-details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-                </div>
-                <div class="what-details">
-                    <img src="images/icons/react.png" alt="" class="what-icon">
-                    <p class="icon-name">React JS</p>
-                    <p class="icon-details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-                </div>
+      <!-- what I do section -->
+      <section class="what-i-do">
+        <h3 class="section-title">What I do</h3>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="what-details-container">
+          <div class="what-details">
+            <img src="images/icons/js.png" alt="" class="what-icon" />
+            <p class="icon-name">Vanilla JavaScript</p>
+            <p class="icon-details">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor
+            </p>
+          </div>
+          <div class="what-details">
+            <img src="images/icons/mongo.png" alt="" class="what-icon" />
+            <p class="icon-name">Mongodb</p>
+            <p class="icon-details">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor
+            </p>
+          </div>
+          <div class="what-details">
+            <img src="images/icons/nodejs.png" alt="" class="what-icon" />
+            <p class="icon-name">NodeJs</p>
+            <p class="icon-details">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor
+            </p>
+          </div>
+          <div class="what-details">
+            <img src="images/icons/react.png" alt="" class="what-icon" />
+            <p class="icon-name">React JS</p>
+            <p class="icon-details">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- resume section -->
+      <section class="what-i-do">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-left">
+            <h4 class="resume-title">My Education</h4>
+            <div class="resume-single">
+              <h5 class="resume-single-title">Master in Computer Engineering</h5>
+              <h6 class="resume-sub-title">Harvard University / 2015 - 2017</h6>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
             </div>
-        </section>
+            <div class="resume-single resume-border">
+              <h5 class="resume-single-title">Master in Computer Engineering</h5>
+              <h6 class="resume-sub-title">Harvard University / 2015 - 2017</h6>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="resume-single">
+              <h5 class="resume-single-title">Master in Computer Engineering</h5>
+              <h6 class="resume-sub-title">Harvard University / 2015 - 2017</h6>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-right">
+            <h4 class="resume-title">My Experience</h4>
+            <div class="resume-single">
+              <h5 class="resume-single-title">Master in Computer Engineering</h5>
+              <h6 class="resume-sub-title">Harvard University / 2015 - 2017</h6>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="resume-single resume-border">
+              <h5 class="resume-single-title">Master in Computer Engineering</h5>
+              <h6 class="resume-sub-title">Harvard University / 2015 - 2017</h6>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="resume-single">
+              <h5 class="resume-single-title">Master in Computer Engineering</h5>
+              <h6 class="resume-sub-title">Harvard University / 2015 - 2017</h6>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
