added btn in resume

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
             </div>
           </div>
         </div>
+        <button class="btn-primary resume-btn">Download CV</button>
       </section>
     </main>
     <footer></footer>
