--- a/index.html
+++ b/index.html
@@ -188,9 +188,32 @@
             </div>
           </div>
         </div>
-        <button class="btn-primary resume-btn">Download CV</button>
+        <div class="resume-btn">
+          <button class="btn-primary ">Download CV</button>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer">
+        <div>
+          <h3 class="section-title">Lets Connect</h3>
+          <p class="section-description ">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <ul class="footer-icons">
+            <li><img src="images/icons/insta.png" alt=""></li>
+            <li><img src="images/icons/facebook.png" alt=""></li>
+            <li><img src="images/icons/twitter.png" alt=""></li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="section-title">Let’s Message me</h3>
+          <form action="">
+            <input type="text" placeholder="name">
+            <input type="email" placeholder="email">
+            <textarea placeholder="message" cols="30" rows="10"></textarea>
+            <input class="btn-primary" type="submit" value="submit">
+          </form>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
