--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/2079aa552b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
@@ -32,8 +33,8 @@
             Shot what ab le cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-white">Contact me</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-white"><i class="fa-solid fa-phone"></i> Contact me</button>
         </div>
         <div>
           <img
@@ -189,7 +190,7 @@
           </div>
         </div>
         <div class="resume-btn">
-          <button class="btn-primary ">Download CV</button>
+          <button class="btn-primary "><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
     </main>
